--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,9 @@
 }
 
 body {
-  background: linear-gradient(to top left, #fefcea, #f1da36);
+  background-color: black;
   background-repeat: no-repeat;
-  color: black;
+  color: white;
   margin: 0;
   height: 900px;
 }
@@ -13,6 +13,7 @@ body {
 .main-header {
   font-size: 50px;
   font-family: serif;
+  color: #ffff34;
   padding-left: 40px;
   margin: 10px;
   margin-top: 30px;
@@ -25,6 +26,13 @@ body {
 
 #search {
   margin-right: 25px;
+  background-color: #ffff34;
+  border: 1px solid grey;
+  border-radius: 3px;
+}
+
+#search:focus {
+  background-color: #ffffca;
 }
 
 .form-selectors-buttons {
@@ -38,16 +46,24 @@ body {
   display: inline-flex;
   flex: 1;
   max-width: 15%;
+  max-height: 15%;
   margin-left: 10px;
   text-align: center;
+  background-color: #ffff34;
+  border: 1px solid grey;
+  border-radius: 3px;
 }
 
 .selector-button:first-child {
   margin: 0px;
 }
 
+.selector-button:last-child {
+  max-width: 35%;
+}
+
 button:hover {
-  background-color: #fefcea;
+  background-color: #ffffca;
 }
 
 
@@ -57,27 +73,34 @@ button:hover {
   justify-content: center;
   font-size: 20px;
   font-family: sans-serif;
+  background-color: #063062;
   flex-direction: column;
 }
 
 .flight-block {
   display: inline-flex;
   flex: 2;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid #ffff34;
+}
+
+.flight-block:hover {
+  background-color: #0361d9;
+  color: #ffff34;
 }
 
 .time,
 .flight,
-.airport {
+.airport,
+.status,
+.city {
   display: inline-flex;
   flex: 2;
   padding: 10px;
 }
 
-.flight-block:nth-child(even) {
-  background-color: lightyellow;
+.city {
+  text-align: right;
 }
 
 .flight-block:first-child {
-  border-top: 1px solid black;
-}
+  border-top: 1px solid #ffff34;
