--- a/src/style.css
+++ b/src/style.css
@@ -10,13 +10,14 @@ body {
   height: 900px;
 }
 
+.content {
+  padding: 0 40px;
+}
+
 .main-header {
   font-size: 50px;
   font-family: serif;
   color: #fcd656;
-  padding-left: 40px;
-  margin: 10px;
-  margin-top: 30px;
 }
 
 .form-block {
@@ -24,32 +25,23 @@ body {
   font-size: 20px;
 }
 
-#search {
+.search {
   margin-right: 25px;
-  background-color: #fcd656;
   border: 1px solid grey;
   border-radius: 3px;
 }
 
-#search:focus {
+.search:focus {
   background-color: #ffffca;
 }
 
 .form-selectors-buttons {
-  display: flex;
-  justify-content: flex-start;
-  width: 40%;
   padding-top: 10px;
 }
 
 .selector-button {
-  display: inline-flex;
-  flex: 1;
-  max-width: 16%;
-  max-height: 15%;
   margin-left: 10px;
   font-weight: bold;
-  background-color: #fcd656;
   border: 1px solid grey;
   border-radius: 3px;
 }
@@ -58,58 +50,47 @@ body {
   margin: 0px;
 }
 
-.selector-button:last-child {
-  max-width: 35%;
+.toggleButton {
+  background-color: white;
+  color: black;
+  padding: 16px;
+  border: none;
 }
 
-button:hover {
-  background-color: #ffffca;
+.toggleButton:hover {
+  text-decoration: underline;
 }
 
-
+.flightNavigation {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
 
 .flight-main-block {
-  display: flex;
-  justify-content: center;
   font-size: 20px;
   font-family: sans-serif;
-  background-color: #0b224e;
-  flex-direction: column;
 }
 
 .flight-block {
-  display: inline-flex;
+  display: flex;
   flex: 2;
-  border-bottom: 1px solid #fcd656;
-}
-
-.flight-block:hover {
-  background-color: #005196;
-  color: #fcd656;
-}
-
-.time,
-.flight,
-.airport,
-.status,
-.city {
-  display: inline-flex;
-  flex: 2;
-  padding: 10px;
-}
-
-.city {
-  text-align: right;
+  border-bottom: 1px solid #333;
 }
 
 .flight-block:first-child {
-  border-top: 1px solid #fcd656;
+  border-top: 1px solid #333;
+}
+
+.flight-block:hover {
+  background-color: #222;
+  color: #fcd656;
 }
 
 .flight-block div:nth-child(even) {
   color: #6594c5;
 }
 
-.flight-block div:first-child {
-  color: #fcd656;
+.flight-table-cell {
+  flex: 2;
+  padding: 10px;
 }
