added other button functions

--- a/src/style.css
+++ b/src/style.css
@@ -3,9 +3,10 @@
 }
 
 body {
-  background-color: black;
+  background-color: #151515;
   background-repeat: no-repeat;
   color: white;
+  font-family: sans-serif;
   margin: 0;
   height: 900px;
 }
@@ -16,8 +17,8 @@ body {
 
 .main-header {
   font-size: 50px;
-  font-family: serif;
   color: #fcd656;
+  margin-left: 35px;
 }
 
 .form-block {
@@ -29,6 +30,7 @@ body {
   margin-right: 25px;
   border: 1px solid grey;
   border-radius: 3px;
+  padding: 8px;
 }
 
 .search:focus {
@@ -39,17 +41,6 @@ body {
   padding-top: 10px;
 }
 
-.selector-button {
-  margin-left: 10px;
-  font-weight: bold;
-  border: 1px solid grey;
-  border-radius: 3px;
-}
-
-.selector-button:first-child {
-  margin: 0px;
-}
-
 .toggleButton {
   background-color: white;
   color: black;
@@ -57,8 +48,18 @@ body {
   border: none;
 }
 
+.search-button {
+  margin-left: 10px;
+  padding: 8px;
+}
+
 .toggleButton:hover {
   text-decoration: underline;
+  cursor: pointer;
+}
+
+.toggleButtonActive {
+  background-color: #fcd656;
 }
 
 .flightNavigation {
@@ -68,7 +69,6 @@ body {
 
 .flight-main-block {
   font-size: 20px;
-  font-family: sans-serif;
 }
 
 .flight-block {
