--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,28 @@ body {
   height: 900px;
 }
 
+.spinner:before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 60px;
+  width: 60px;
+  margin-top: -30px;
+  margin-left: -30px;
+  border-radius: 50%;
+  border-top: 3px solid #fcd656;
+  border-right: 3px solid transparent;
+  animation: spinner 0.7s linear infinite;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 .content {
   padding: 10px 40px;
   display: flex;
@@ -87,16 +109,16 @@ body {
 }
 
 .clock-block {
-  display: inline-block;
-  width: 45%;
+  display: flex;
+  width: 50%;
   padding: 24px;
   margin-bottom: 15px;
+  justify-content: space-around;
 }
 
 .loading {
   font-size: 20px;
   text-align: center;
-  padding: 30px;
 }
 
 .flight-main-block {
